[package]
name = "out-zero-linear-map"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Small ordered map backed by a sorted array/Vec. #![no_std], zero dependencies, binary-search lookups."
categories = ["no-std", "data-structures"]
keywords = ["map", "linear-map", "sorted", "no_std", "binary-search"]

[dependencies]
out-zero-arrayvec = { path = "../out-zero-arrayvec", version = "0.1.0" }

[dev-dependencies]
proptest.workspace = true

[features]
default = []
alloc = []
