[package]
name = "out-zero-ring"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Fixed-capacity circular buffer for streaming data. #![no_std], zero dependencies, sound Drop."
categories = ["no-std", "data-structures"]
keywords = ["ring", "circular-buffer", "no_std", "queue"]

[dependencies]

[dev-dependencies]
proptest.workspace = true

[features]
default = []
