[package]
name = "tpt-zero-json"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Zero-alloc pull JSON tokenizer plus an alloc-backed Value model. #![no_std] core, dependency-free."
categories = ["no-std", "encoding", "parser-implementations"]
keywords = ["json", "parser", "no_std", "tokenizer", "deserialize"]

[dependencies]
tpt-zero-utf8 = { path = "../tpt-zero-utf8", version = "0.1.0" }
tpt-zero-numstr = { path = "../tpt-zero-numstr", version = "0.1.0" }
tpt-zero-str-search = { path = "../tpt-zero-str-search", version = "0.1.0" }

[dev-dependencies]
proptest.workspace = true

[features]
default = []
alloc = []
