[package]
name = "tpt-zero-once"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Once/OnceCell/Lazy via an atomic state machine. #![no_std], zero dependencies."
categories = ["no-std", "concurrency", "rust-patterns"]
keywords = ["once", "lazy", "sync", "no_std"]

[dependencies]

[dev-dependencies]
proptest.workspace = true

[features]
default = []
