[package]
name = "tpt-zero-slug"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "ASCII/Latin-1-safe slug generation. #![no_std], zero dependencies, buffer-writer core API."
categories = ["no-std", "text-processing", "encoding"]
keywords = ["slug", "slugify", "no_std", "url", "transliteration"]

[dependencies]
tpt-zero-utf8 = { path = "../tpt-zero-utf8", version = "0.1.0" }

[dev-dependencies]
proptest.workspace = true

[features]
default = []
alloc = []
