[package]
name = "tpt-zero-spin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Spin-based mutex and RW-lock for #![no_std]. Zero dependencies."
categories = ["no-std", "concurrency", "embedded"]
keywords = ["spinlock", "mutex", "rwlock", "no_std"]

[dependencies]

[dev-dependencies]
proptest.workspace = true

[features]
default = []
