[package]
name = "tpt-zero-str-search"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Fast byte and substring search (memchr-style + Boyer-Moore-Horspool). #![no_std], zero dependencies."
categories = ["no-std", "text-processing", "algorithms"]
keywords = ["search", "memchr", "boyer-moore", "no_std"]

[dependencies]

[dev-dependencies]
proptest.workspace = true

[features]
default = []
