[package]
name = "tpt-zero-vec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Small f32 vector math (Vec2/Vec3/Vec4) for #![no_std]. #![no_std], zero dependencies, fast-math backed."
categories = ["no-std", "mathematics", "game-development"]
keywords = ["vector", "math", "no_std", "vec3", "vec4"]

[dependencies]
tpt-zero-fast-math = { path = "../tpt-zero-fast-math", version = "0.1.0" }

[dev-dependencies]
proptest.workspace = true

[features]
default = []
alloc = []
